# gitack

./: LICENSE  README.md  install_deps.sh  pyproject.toml  requirements.txt
gitack/: __init__.py  constants.py  gitack.sh  loader.py  main.py  ui.py  validation.py
gitack/YAML_FILES/: questions.yaml
